src/ui/snapshots/cornercase__ui__changes__tests__shows_an_error.snap
---
source: src/ui/changes.rs
expression: "render(&view, None).backend()"
---
"  uncommitted   commits   all                         ⌕  ×  "
" cannot compare with nope                                   "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
" ────────────────────────────────────────────────────────── "
"                                                            "
